# pose-llm

./: .gitignore  README.md  annotate_questions.py  collator.py  config.yaml  dataset.py  example_dir.toml  model.py  notes.txt  paths.py  preprocess_data.py  pyproject.toml  train.py  train_pose.py
collators/: __init__.py  asr_collator.py  conversational_pose_collator.py  monostream_pose_collator.py  text_collator.py
inference/: audio_pose_interleaved_inference.py  comparisons.py  decode.py  decode_audio.py  decode_pose.py  eval_audio.py  eval_pose.py  full.sh  tokenizer_config.yaml
models/: backbone_model.py  depth_model.py  original_depth_model.py  swiglu.py
pose_tokenizer/: config.py  tokenizer.py
pose_tokenizer/data/: dataset.py
pose_tokenizer/model/: seanet_transformer.py  tokenizer.py
pose_tokenizer_james/: __init__.py  config.py
pose_tokenizer_james/data/: __init__.py  kinematic.py  rendering.py  visualization.py
pose_tokenizer_james/model/: __init__.py  decoder.py  encoder.py  layers.py  vq.py
pose_tokenizer_xabi/: config.py  decoder_optimized.py
pose_tokenizer_xabi/data/: dataset.py
pose_tokenizer_xabi/model/: tokenizer.py
pose_tokenizer_xabi/training/: __init__.py  bootstrap.py  data_setup.py  logging_utils.py  utils.py  validation.py
train_utils/: filter_dataset.py  generate_dataset.py  length_matching_sampler.py  trainer.py
wandb/: latest-run
wandb/run-20260627_142407-7olry24i/: run-7olry24i.wandb
wandb/run-20260627_142407-7olry24i/files/: requirements.txt  wandb-metadata.json
