[project]
name = "my-project"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "numpy",
    "pyyaml>=6.0.3",
    "datasets>=5.0.0",
    "transformers>=5.12.1",
    "accelerate>=1.14.0",
    "flash-attn==2.8.3",
    "liger-kernel>=0.8.0",
    "wandb",
    "pillow>=12.2.0",
]

[tool.uv]
package = false
